discussion/kv_engine/130052/130052_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

magma-kvstore: Remove Sync(true) from compactDB

The CompactKVStore API internally performs necessary write cache
flushing before performing the compaction. Calling sync for the entire
db slows down the compaction operation.

Changed the compact kvstore API call to compact the entire kvstore.

Change-Id: I4217ec88909d99b94e59402db74c3ea0a2dde034

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2020-06-08 14:15:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-08 14:21:33.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4042/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4042/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4000/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11876/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11876/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24459/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1784:9:
error: use of undeclared identifier "status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24459/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28432/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1784): error C2065: "status": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28432/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2634/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1784:9: error: use of undeclared identifier "status" [clang-diagnostic-error]
        status = magma->CompactKVStore(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1786:14: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
        if (!status) {
             ^~~~~~
             stat
/usr/include/x86_64-linux-gnu/sys/stat.h:452:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1808:13: error: use of undeclared identifier "status" [clang-diagnostic-error]
            status = magma->CompactKVStore(
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1810:18: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
            if (!status) {
                 ^~~~~~
                 stat
/usr/include/x86_64-linux-gnu/sys/stat.h:452:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1817:25: error: use of undeclared identifier "status" [clang-diagnostic-error]
                        status.String());
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1860:9: error: use of undeclared identifier "status" [clang-diagnostic-error]
        status = magma->WriteDocs(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1862:14: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
        if (!status) {
             ^~~~~~
             stat
/usr/include/x86_64-linux-gnu/sys/stat.h:452:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1867:21: error: use of undeclared identifier "status" [clang-diagnostic-error]
                    status.String());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1870:9: error: use of undeclared identifier "status" [clang-diagnostic-error]
        status = magma->Sync(doCommitEveryBatch);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1871:14: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
        if (!status) {
             ^~~~~~
             stat
/usr/include/x86_64-linux-gnu/sys/stat.h:452:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1875:21: error: use of undeclared identifier "status" [clang-diagnostic-error]
                    status.String());
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2634/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1784:9:
error: use of undeclared identifier "status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3106/ : FAILURE

Compile error at [2020-06-08T14:16:54.188Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1784:9:
error: use of undeclared identifier "status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3106/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4127/ : FAILURE

Compile error at [2020-06-08T14:16:26.241Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1784:9:
error: ?status? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4127/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1138/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
